<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Xemio</string>
  <string name="logo_description">Logo de Xemio</string>

  // Main activity
  <string name="title_main">¡Bienvenida a la aplicación de Xemio!</string>
  <string name="text_main_1">Bienvenida a Xemio App, la aplicación de Android para pacientes de
    Quimioterapia de Cáncer de mama.
  </string>
  <string name="text_main_2">Esta aplicación te acompañará durante la quimioterapia para facilitarte
    información, un punto de referencia que te sirva para disminuir la ansiedad que produce el
    tratamiento,
    y para observar cómo les va a otras.
  </string>
  <string name="text_main_3">Para poder acompañarte necesitamos hacerte unas pocas preguntas
    ¿Quieres empezar la experiencia Xemio?
  </string>
  <string name="btn_deny">Rechazar</string>
  <string name="btn_begin">Empezar</string>

  // Register Activity
  <string name="title_register">Elige una opción:</string>
  <string name="btn_login">Entrar</string>
  <string name="btn_logup">Registrar</string>

  // Login Activity
  <string name="title_login">Loguearse en Xemio</string>
  <string name="text_email">Email</string>
  <string name="btn_back">Atrás</string>
  <string name="btn_go">Entrar</string>

  // Logup Activity
  <string name="title_logup">Rellena los datos para comenzar</string>
  <string name="text_pass">Contraseña</string>
  <string name="text_pass_reply">Repite Contraseña</string>

  // Extra Activity
  <string name="title_extra">Rellena sus datos para comenzar</string>
  <string name="text_alias">Nombre</string>
  <string name="text_age">Edad</string>

  // Chemo Activity
  <string name="title_chemo">Selecciona su tipo de quimioterapia</string>
  <string name="btn_next">Siguiente</string>
  <string name="dialog_select_chemo">Quimio seleccionada</string>

  // Dashboard Activity
  <string name="action_settings">Ajustes</string>
  <string name="action_logout">Cerrar sesión</string>
  <string name="action_notificacion">Notificacion</string>
  <string name="action_incidence">Incidencia</string>
  <string name="action_chat">Chat</string>
  <string name="btn_info">Información</string>
  <string name="btn_treat">Tratamientos</string>
  <string name="btn_effect">Efectos secundarios</string>
  <string name="btn_web">Web fundación</string>

  // Info Activity
  <string name="toolbar_title_info">Información Cáncer de Mama</string>
  <string name="info_title_1">1.- ¿Qué es el cáncer de mama?</string>
  <string name="info_title_2">2.- ¿Qué pruebas me van a realizar?</string>
  <string name="info_title_3">3.- Tipos de células y tipos de tumores</string>
  <string name="info_title_4">4.- ¿Cómo clasificamos el cáncer de mama que me han diagnosticado?
  </string>
  <string name="info_title_5">5.- Tipo de tratamiento</string>
  <string name="info_title_6">6.- Otros aspectos a tener en cuenta</string>
  <string name="info_title_7">7.- Otros sitios para consultar</string>

  // Treatment Activity
  <string name="toolbar_title_treatment">Información Tratamientos</string>

  // Details Treatment Activity
  <string name="toolbar_title_treatment_detail">Tratamiento detallado</string>
  <string name="text_treatment_items">Tratamientos:</string>

  // Effect Activity
  <string name="toolbar_title_effect">Efectos Secundarios</string>

  // Details Effect Activity
  <string name="toolbar_title_effect_detail">Efecto Secundario Detallado</string>
  <string name="text_effect_item">Efecto:</string>
  <string name="text_category_item">Categoría:</string>
  <string name="text_advice_item">Consejo:</string>

  // Incidence Activity
  <string name="toolbar_title_incidence">Nueva incidencia</string>
  <string name="form_text_subject">Asunto</string>
  <string name="form_text_description">Descripción</string>
  <string name="dialog_title_new_incidence">Incidencia creada</string>
  <string name="dialog_message_new_incidence">Puedes ver su incidencia en su historial</string>
  <string name="dialog_title">Estoy de prueba</string>
  <string name="dialog_message">Esto si que mola!!</string>

  // History Activity
  <string name="toolbar_title_history">Historial</string>
  <string name="not_items">No hay incidencias para ver.</string>

  // Details Incidence Activity
  <string name="toolbar_title_incidence_detail">Incidencia detallada</string>
  <string name="dialog_title_detail_incidence">Incidencia</string>
  <string name="dialog_message_detail_incidence">¿Deseas eliminar la incidencia?</string>

  // Details Effects Activity
  <string name="text_effect_item_title">Tratamiento</string>
  <string name="text_effect_item_category">Categoría</string>
  <string name="text_effect_item_advice">Consejo</string>

  // Settings Activity
  <string name="toolbar_title_settings">Ajustes</string>
  <string name="category_user">Ajustes</string>
  <string name="field_alias">Cambiar alias</string>
  <string name="field_age">Cambiar edad</string>
  <string name="field_pass">Cambiar contraseña</string>
  <string name="category_about">App</string>
  <string name="field_market">Google Play</string>
  <string name="field_rate">Puntuación</string>
  <string name="field_authors">Autores</string>
  <string name="field_version">Version de la aplicación</string>
  <string name="category_data">Datos usuario</string>
  <string name="field_logout_title">Cerrar sesión</string>
  <string name="field_logout_text">Salir de la App</string>

  // Notifications Activity
  <string name="toolbar_title_notifications">Notificaciones</string>
  <string name="noti_not_items">No hay notificaciones para ver.</string>

  // error message
  <string name="error_email">Introduce un email válido</string>
  <string name="error_pass">Mínimo 6 caracteres sin espacios</string>
  <string name="error_age">Edad inválida</string>
  <string name="error_empty_field">Campo no vacío</string>
  <string name="error_pass_diff">Contraseñas deben ser iguales</string>

  // tmp values
  <string name="element_prompt">Selecciona un elemento</string>
  <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vel ligula
    eget ante aliquam viverra non quis est. Duis nunc orci, imperdiet eget fringilla vitae, bibendum
    non dui. Nulla feugiat commodo nisi, at pulvinar dolor sagittis id. Suspendisse potenti. Nunc
    sollicitudin, sapien sit amet varius convallis, augue mauris sagittis sapien, a hendrerit mi
    turpis eget leo. Integer viverra purus id erat euismod molestie eget non orci. Curabitur
    elementum ac nibh id dapibus. Vestibulum finibus ex in metus consequat vestibulum eget rhoncus
    lacus. Morbi eu egestas erat. Etiam nec blandit neque. Mauris id efficitur justo. Aenean posuere
    viverra nisi, sed ullamcorper nisl aliquam nec. Suspendisse imperdiet felis eu enim efficitur,
    quis pulvinar arcu porttitor. Etiam erat lorem, pellentesque sit amet urna vel, lobortis
    vulputate sem.
  </string>

  // UI components text
  <string name="string_content_description">Non accessible view</string>

</resources>
