<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
      android:id="@+id/action_settings"
      android:title="@string/action_settings"
      android:orderInCategory="1"
      app:showAsAction="never"
      />

  <item
      android:id="@+id/action_logout"
      android:title="@string/action_logout"
      android:orderInCategory="2"
      app:showAsAction="never"
      />

  <item
      android:id="@+id/action_notification"
      android:orderInCategory="100"
      android:title="@string/action_notificacion"
      android:icon="@drawable/ic_notifications_white_24dp"
      app:showAsAction="always"/>

  <item
      android:id="@+id/action_chat"
      android:orderInCategory="200"
      android:title="@string/action_chat"
      android:icon="@drawable/ic_chat_white_24dp"
      app:showAsAction="always"
      />
  <item
      android:id="@+id/action_incidence"
      android:orderInCategory="300"
      android:title="@string/action_incidence"
      android:icon="@drawable/ic_add_white_24dp"
      app:showAsAction="always"/>


</menu>
