<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <include layout="@layout/container_logo"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:background="@color/color_white"
      android:layout_marginTop="@dimen/container_margin_top"
      >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/title_login"
        android:layout_marginBottom="@dimen/card_margin"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin"
        android:layout_marginTop="@dimen/card_margin"
        >
    </TextView>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/inputLayout_margin"
        android:paddingRight="@dimen/inputLayout_margin"
        >

      <EditText
          android:id="@+id/emailInput"
          android:inputType="textEmailAddress"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:hint="@string/text_email"
          android:singleLine="true"
          />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/inputLayout_margin"
        android:paddingRight="@dimen/inputLayout_margin"
        >

      <EditText
          android:id="@+id/passInput"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:hint="@string/text_pass"
          android:inputType="textPassword"
          android:ellipsize="start"
          android:singleLine="true"
          />

    </android.support.design.widget.TextInputLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/card_margin"
        android:layout_marginTop="@dimen/card_margin"
        android:visibility="gone"
        />

  </LinearLayout>

  <include layout="@layout/container_toolbar_theme_btn"/>

</merge>