<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginTop="@dimen/logo_margin_top"
      android:background="@color/color_alpha"
      >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/xemio_icon_blanco"
        android:contentDescription="@string/logo_description"
        />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:background="@color/color_white"
      android:layout_marginTop="@dimen/container_margin_top"
      >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/title_cancer"
        android:layout_marginBottom="@dimen/card_margin"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin"
        android:layout_marginTop="@dimen/card_margin"
        >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/color_white"
        android:paddingLeft="@dimen/content_margin_30"
        android:paddingRight="@dimen/content_margin_30"
        android:paddingTop="@dimen/card_margin"
        >

      <fr.ganfra.materialspinner.MaterialSpinner
          android:id="@+id/spinner4"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:prompt="@string/element_prompt"
          />
      <ProgressBar
          android:id="@+id/progress"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginBottom="@dimen/card_margin"
          android:layout_marginTop="@dimen/card_margin"
          android:visibility="gone"
          />

    </LinearLayout>


  </LinearLayout>

  <LinearLayout
      android:background="@color/color_alpha"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:gravity="bottom"
      android:layout_alignParentBottom="true"
      android:orientation="vertical"
      android:weightSum="1"
      >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/ColorDivider"
        >
    </TextView>
    <LinearLayout
        android:background="@color/color_white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="1"
        android:orientation="horizontal"

        >
      <Button
          android:id="@+id/btn_deny"
          android:visibility="invisible"
          android:layout_width="wrap_content"
          android:layout_height="fill_parent"
          android:text="@string/btn_back"
          android:layout_gravity="start"
          style="?android:attr/borderlessButtonStyle"
          android:layout_weight="0.2"
          />

      <FrameLayout
          android:layout_width="wrap_content"
          android:layout_height="fill_parent"
          android:layout_weight="0.6"
          android:layout_gravity="center"
          />

      <Button
          android:id="@+id/btn_next"
          android:layout_width="wrap_content"
          android:layout_height="fill_parent"
          android:text="@string/btn_next"
          android:layout_gravity="start"
          android:layout_weight="0.2"
          android:textColor="@color/color_white"
          />
    </LinearLayout>
  </LinearLayout>
</RelativeLayout>