<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <android.support.design.widget.AppBarLayout
      android:id="@+id/appbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/ColorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

  </android.support.design.widget.AppBarLayout>

  <ScrollView
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/content"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:layout_marginTop="?android:attr/actionBarSize"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/card_margin"
        android:layout_marginBottom="?android:attr/actionBarSize"
        android:paddingBottom="@dimen/card_margin"
        >


      <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/card_margin"
          android:layout_marginLeft="@dimen/card_margin"
          android:layout_marginRight="@dimen/card_margin"
          android:layout_gravity="center_horizontal"
          >

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textAppearance="@style/TextAppearance.AppCompat.Title"
              android:text="@string/text_effect_item"
              android:layout_marginBottom="@dimen/card_margin"
              android:layout_marginLeft="@dimen/card_margin"
              android:layout_marginRight="@dimen/card_margin"
              android:layout_marginTop="@dimen/card_margin"
              >
          </TextView>

          <TextView
              android:id="@+id/tvEffect"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
              android:layout_marginBottom="@dimen/card_margin"
              android:layout_marginLeft="@dimen/card_margin"
              android:layout_marginRight="@dimen/card_margin"
              >
          </TextView>

        </LinearLayout>
      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/card_margin"
          android:layout_marginLeft="@dimen/card_margin"
          android:layout_marginRight="@dimen/card_margin"
          android:layout_gravity="center_horizontal"
          >

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textAppearance="@style/TextAppearance.AppCompat.Title"
              android:text="@string/text_category_item"
              android:layout_marginBottom="@dimen/card_margin"
              android:layout_marginLeft="@dimen/card_margin"
              android:layout_marginRight="@dimen/card_margin"
              android:layout_marginTop="@dimen/card_margin"
              >
          </TextView>

          <TextView
              android:id="@+id/tvCategory"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
              android:layout_marginBottom="@dimen/card_margin"
              android:layout_marginLeft="@dimen/card_margin"
              android:layout_marginRight="@dimen/card_margin"
              >
          </TextView>

        </LinearLayout>
      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/card_margin"
          android:layout_marginLeft="@dimen/card_margin"
          android:layout_marginRight="@dimen/card_margin"
          android:layout_gravity="center_horizontal"
          >

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textAppearance="@style/TextAppearance.AppCompat.Title"
              android:text="@string/text_advice_item"
              android:layout_marginBottom="@dimen/card_margin"
              android:layout_marginLeft="@dimen/card_margin"
              android:layout_marginRight="@dimen/card_margin"
              android:layout_marginTop="@dimen/card_margin"
              >
          </TextView>

          <TextView
              android:id="@+id/tvAdvice"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
              android:layout_marginBottom="@dimen/card_margin"
              android:layout_marginLeft="@dimen/card_margin"
              android:layout_marginRight="@dimen/card_margin"
              >
          </TextView>

        </LinearLayout>
      </android.support.v7.widget.CardView>
    </LinearLayout>
  </ScrollView>
</android.support.design.widget.CoordinatorLayout>